<resources>
    <string name="app_name">Nusaliciouss</string>
    <string name="todo">TODO</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="lupa_password">Lupa password?</string>
    <string name="login">MASUK</string>
    <string name="phone">Nomor Handphone</string>
    <string name="name">Nama Lengkap</string>
    <string name="register">DAFTAR AKUN</string>
    <string name="welcome">SELAMAT DATANG\nDI\nNusa Licious</string>
    <string name="logo">N</string>
    <string name="rice_box">RiceBox</string>
    <string name="buffet">Prasmanan</string>
    <string name="office">Kantoran</string>
    <string name="breaking">Coffee_Break</string>
    <string name="shaped">Tumpeng</string>
    <string name="Basket">Rantang</string>
    <string name="traditional">Tradisional</string>
    <string name="anymore">Lainnya</string>
    <string name="remove">Hapus</string>
    <string name="buy">Beli</string>
    <string name="detail">detail menu</string>
    <string name="title_menu">title menu</string>
    <string name="Title">Judul</string>
    <string name="rp">Rp.</string>
    <string name="date">Tanggal Pengiriman*</string>
    <string name="time">Pilih Jam</string>
    <string name="fav">Favorite</string>
    <string name="_100_pcs">100 Pcs</string>
    <string name="tips">Tips: msl Lantai 4</string>
    <string name="drink">Drink</string>
    <string name="developer">Hi, Victorio</string>
    <string name="you_money">Saldo anda</string>
    <string name="money">Rp. 100000</string>
    <string name="top">Top Up</string>
    <string name="disc">Diskon</string>
    <string name="stay_at_home">Stay At Home</string>
    <string name="home">Home</string>
    <string name="order">Pesanan</string>
    <string name="chart">Keranjang</string>
    <string name="payment">Pembayaran</string>
    <string name="account">Akun</string>
    <string name="packet">Paket Langganan</string>
    <string name="desc_packet">Untuk Semua</string>
    <string name="copyright">Copyright VIPWorkSpace</string>
    <string name="history">Riwayat</string>
    <string name="duration">Durasi</string>
    <string name="time_eat">Jam makan</string>
    <string name="quantity">5x</string>
    <string name="price_item">Rp.1520000</string>
    <string name="ready_pay">Transaksi Siap Bayar</string>
    <string name="pay">Bayar</string>
    <string name="order_konfirmasi">Konfirmasi Pemesanan</string>
    <string name="location_delivery">Alamat Penerima</string>
    <string name="reception">Nama Penerima</string>
    <string name="delivery_schedule">Jadwal Pengiriman</string>
    <string name="remove_chart">Hapus Keranjang</string>
    <string name="total_bill">Total tagihan :</string>
    <string name="your_balance">Saldo anda :</string>
    <string name="process">Proses</string>
    <string name="total_tagihan">Total Tagihan</string>
    <string name="service_fee">Biaya Layanan</string>
    <string name="total_bayar">Total Bayar</string>
    <string name="summary_payment">Ringkasan Pembayaran</string>
    <string name="free">Gratis</string>
    <string name="saldo_pay">Saldo Gpay</string>
    <string name="gpay">Gunakan Gpay</string>
    <string name="buy_again">Beli lagi</string>
    <string name="dpawon">Dpawon Katering</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="location">Alamat Penerima</string>
    <string name="contact">Kontak Telepon</string>
    <string name="tip">Petunjuk Lokasi</string>
    <string name="email2">xae@nusamandiri.ac.id</string>
    <string name="profile_detail">Profile Detail</string>
    <string name="number_phone">Nomer Handphone</string>
    <string name="hint">pager hijau ada boneka gundam</string>
    <string name="search">cari menu</string>
    <string name="empty">Keranjang Kosong, Yuk Pesan</string>
    <string name="order_empty">Belum ada pesanan, Yuk Pesan !</string>
    <string name="riwayat_order">Belum ada riwayat sobat Nusa</string>
    <string name="waktu">Waktu Pengiriman*</string>
    <string name="harga">2550000</string>
</resources>