<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginBottom="10dp"
    app:cardElevation="5dp"
    app:cardBackgroundColor="@color/White">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="75dp">

        <ImageView
            android:id="@+id/image_menu"
            android:layout_width="70dp"
            android:layout_height="75dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="0dp"
            android:contentDescription="@string/todo"/>

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Title"
            android:textSize="14sp"
            android:textColor="#000"
            android:layout_marginStart="100dp"
            android:layout_marginTop="5dp"/>


        <TextView
            android:id="@+id/quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title"
            android:layout_marginStart="100sp"
            android:layout_marginTop="7dp"
            android:text="@string/quantity"
            android:textSize="14sp"
            android:textColor="#000"
            />

        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="22dp"
            android:text="@string/price_item"
            android:textColor="#000"
            android:textSize="14sp"
            tools:ignore="RelativeOverlap" />
    </RelativeLayout>



</androidx.cardview.widget.CardView>