<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.TopupActivity">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:background="@drawable/topupp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btn_back_topup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_arrow_back"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/saldo_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saldo_pay"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Click To Top Up"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:layout_marginTop="220dp"
        app:layout_constraintEnd_toEndOf="@+id/imageView5"
        app:layout_constraintStart_toStartOf="@+id/imageView5"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/btn_topup_5000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/shape_order"
        android:text="Rp 5.000"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <Button
        android:id="@+id/btn_topup_15000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/shape_order"
        android:text="Rp 15.000"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="@+id/btn_topup_5000"
        app:layout_constraintStart_toStartOf="@+id/btn_topup_5000"
        app:layout_constraintTop_toBottomOf="@+id/btn_topup_5000" />

    <Button
        android:id="@+id/btn_topup_25000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/shape_order"
        android:text="Rp 25.000"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="@+id/btn_topup_15000"
        app:layout_constraintStart_toStartOf="@+id/btn_topup_15000"
        app:layout_constraintTop_toBottomOf="@+id/btn_topup_15000" />
</androidx.constraintlayout.widget.ConstraintLayout>